--- a/.github/workflows/update-llms.yml
+++ b/.github/workflows/update-llms.yml
@@ -29,8 +29,8 @@ jobs:
     
     - name: Commit and push changes
       run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
+        git config --local user.email "l.drontmann@lively.nl"
+        git config --local user.name "Lars"
         git add llms.txt
         git diff --staged --quiet || git commit -m "Auto-update llms.txt - $(date)"
         git push
