--- a/.github/workflows/update-llms.yml
+++ b/.github/workflows/update-llms.yml
@@ -33,9 +33,11 @@ jobs:
       run: |
         git config --local user.email "l.drontmann@lively.nl"
         git config --local user.name "Lars"
+        git remote set-url origin https://x-access-token:${GH_PAT}@github.com/lars-lively/llms.git
         git add llms.txt
         git diff --staged --quiet || git commit -m "Auto-update llms.txt - $(date)"
-        git push https://x-access-token:${GH_PAT}@github.com/lars-lively/llms.git HEAD:main
+        git push origin HEAD:main
+
 
     
     - name: Upload to Webflow (if configured)
