--- a/.github/workflows/update-llms.yml
+++ b/.github/workflows/update-llms.yml
@@ -26,22 +26,17 @@ jobs:
     - name: Run LLMS update script
       run: |
         python update_llms_txt.py
-    
+
     - name: Commit and push changes
-      env:
-        GH_PAT: ${{ secrets.GH_PAT }}
       run: |
         git config --local user.email "l.drontmann@lively.nl"
         git config --local user.name "Lars"
-        git remote set-url origin https://x-access-token:${GH_PAT}@github.com/lars-lively/llms.git
+        git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/lars-lively/llms.git
         git add llms.txt
         git diff --staged --quiet || git commit -m "Auto-update llms.txt - $(date)"
         git push origin HEAD:main
 
-
-
-    
     - name: Upload to Webflow (if configured)
       run: |
         # Optional: Add upload script here
-        echo "LLMS.txt updated successfully!" 
+        echo "LLMS.txt updated successfully!"
