--- a/.github/workflows/update-llms.yml
+++ b/.github/workflows/update-llms.yml
@@ -2,9 +2,11 @@ name: Update LLMS.txt
 
 on:
   schedule:
-    # Runs every week on Monday at 3 AM UTC
-    - cron: '0 3 * * 1'
-  workflow_dispatch:  # Allows manual trigger
+    - cron: '0 3 * * 1'  # Elke maandag om 03:00 UTC
+  workflow_dispatch:
+
+permissions:
+  contents: write  # Laat GitHub Actions naar de repo schrijven
 
 jobs:
   update-llms:
@@ -13,7 +15,9 @@ jobs:
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
-    
+      with:
+        fetch-depth: 0
+
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
@@ -29,28 +33,8 @@ jobs:
 
     - name: Commit and push changes
       run: |
-        git config --local user.email "l.drontmann@lively.nl"
-        git config --local user.name "Lars"
-        git remote set-url origin https://x-access-token:${{ secrets.GH_PAT }}@github.com/lars-lively/llms.git
+        git config --local user.email "actions@github.com"
+        git config --local user.name "GitHub Actions"
         git add llms.txt
-        git diff --staged --quiet || git commit -m "Auto-update llms.txt - $(date)"
-        git push origin HEAD:main
-
-    - name: Upload to Webflow (if configured)
-      run: |
-        # Optional: Add upload script here
-        echo "LLMS.txt updated successfully!"
-
-    - name: Show git remote
-      run: |
-        git remote -v
-
-    - name: Test auth with token
-      run: |
-        curl -H "Authorization: token ${{ secrets.GH_PAT }}" https://api.github.com/repos/lars-lively/llms
-
-    - name: Debug git info
-      run: |
-        git branch -a
-        git remote -v
-
+        git diff --staged --quiet || git commit -m "Auto-update llms.txt - $(date -u +'%Y-%m-%d %H:%M:%S UTC')"
+        git push
